--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@wdio/allure-reporter": "^8.8.0",
     "@wdio/cli": "^8.5.5",
     "@wdio/cucumber-framework": "^8.8.0",
+    "@wdio/firefox-profile-service": "^8.10.4",
     "@wdio/local-runner": "^8.5.5",
     "@wdio/mocha-framework": "^8.4.0",
     "@wdio/selenium-standalone-service": "^8.8.0",
     "@wdio/spec-reporter": "^8.4.0",
     "allure-commandline": "^2.21.0",
-    "chromedriver": "^112.0.0",
+    "chromedriver": "^114.0.1",
     "deepmerge": "^4.3.1",
     "fs": "^0.0.1-security",
     "geckodriver": "^3.2.0",
